--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-	"name": "Mindscape/Raygun4php",
+	"name": "mindscape/raygun4php",
 	"type": "library",
-	"description": "Raygun.io client for PHP 5.3, for sending errors and exceptions automatically.",
+	"description": "Raygun.io client for PHP 5.3, to send errors and exceptions automatically.",
 	"authors": [{
 		"name": "Mindscape",
 		"email": "contact@mindscape.co.nz",
