Suggest curl extension in composer

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,11 @@
 	"license": "MIT",
 	"require": {
 		"php": ">=5.3.0"
+
 	},
+	"suggest": { 	 
+	       "ext-curl": "*" 	 	
+    },
 	"autoload": {
         "psr-0": {
             "Raygun4php": "src/"
