--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,9 @@
 		"php": ">=5.3.0"
 
 	},
+        "suggest": {    
+                "ext-curl": "*"      
+        },
 	"autoload": {
         "psr-0": {
             "Raygun4php": "src/"
