--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "mead-steve/raygun4php",
     "type": "library",
     "description": "Fork and extension of the official Raygun.io client for PHP. Implements some extra communication options. Provides message builders and senders to allow composition of new clients.",
+    "version": "0.1.0",
     "authors": [
         {
             "name": "Mindscape",
