--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ php:
   - 5.4
   - 5.5
 
-before_script:
+install:
   - composer self-update
   - composer install --dev --prefer-source --no-interaction --no-progress
 
