--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,5 @@ install:
   - composer self-update
   - composer install --dev --prefer-source --no-interaction --no-progress
 
-script: 'vendor/bin/phpunit tests'
+script:
+  - vendor/bin/phpunit
