Enhancement: Leverage container-based infrastructure
See http://docs.travis-ci.com/user/workers/container-based-infrastructure/#Routing-your-build-to-container-based-infrastructure

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ php:
   - 5.4
   - 5.5
 
+sudo: false
+
 install:
   - composer self-update
   - composer install --dev --prefer-source --no-interaction --no-progress
