--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,10 @@ php:
 
 sudo: false
 
+cache:
+  directories:
+    - $HOME/.composer/cache
+
 install:
   - composer self-update
   - composer install --dev --prefer-source --no-interaction --no-progress
