Fix: Interaction is not required anyway, is it?

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ cache:
 
 install:
   - composer self-update
-  - composer install --dev --no-interaction --no-progress
+  - composer install --dev --no-progress
 
 script:
   - vendor/bin/phpunit
