--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,6 @@ before_script:
   - composer self-update
   - composer install --dev --prefer-source --no-interaction --no-progress
 
-script: 'vendor/bin/phpunit tests'
+script:
+  - vendor/bin/phpcs --standard=PSR2 -p --ignore=vendor .
+  - vendor/bin/phpunit tests
