--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     },
     "autoload": {
         "psr-0": {
-            "Raygun4php": "src/"
+            "Raygun4Php": "src/"
         }
     }
 }
