Load the tests with composer and PSR4

--- a/composer.json
+++ b/composer.json
@@ -23,5 +23,10 @@
         "psr-0": {
             "Raygun4php": "src/"
         }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Raygun4php\\": "tests"
+        }
     }
 }
