Follow PSR-4 autoloading syntax

--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,8 @@
         "ext-curl": "*"
     },
     "autoload": {
-        "psr-0": {
-            "Raygun4php": "src/"
+        "psr-4": {
+            "Raygun4php\\": "src/Raygun4php/"
         }
     }
 }
