--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ php: [5.4, 5.5, 7.0]
 
 before_script:
   - composer self-update
-  - composer install --dev --prefer-source --no-interaction --no-progress
+  - composer install --prefer-source --no-interaction --no-progress
 
 script: 'vendor/bin/phpunit tests'
