--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: php
 
 php:
-  - 5.4
-  - 5.5
-  - 7.0
+  - '7.1'
+  - '7.2'
+  - '7.3'
 
 cache:
   directories:
@@ -14,3 +14,4 @@ install:
 
 script:
   - vendor/bin/phpunit
+  - vendor/bin/phpcs src/ tests/
