--- a/composer.json
+++ b/composer.json
@@ -18,10 +18,11 @@
         }
     ],
     "require": {
-        "php": "^5.4 || ^7.0"
+        "php": "^7.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.8.16"
+        "phpunit/phpunit": "^7.0",
+        "squizlabs/php_codesniffer": "^3.0"
     },
     "suggest": {
         "ext-curl": "*"
@@ -32,8 +33,9 @@
         }
     },
     "autoload": {
-        "psr-0": {
-            "Raygun4php\\": "src/"
+        "psr-4": {
+            "Raygun4php\\": "src/Raygun4php/",
+            "Raygun4php\\Tests\\": "tests/"
         }
     },
     "config": {
