--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ php:
   - 7.0
 
 install:
-  - composer install --prefer-source --no-interaction --no-progress
+  - composer install --no-interaction --no-progress
 
 script: 'vendor/bin/phpunit tests'
