--- a/composer.json
+++ b/composer.json
@@ -23,5 +23,8 @@
         "psr-0": {
             "Raygun4php": "src/"
         }
+    },
+    "config": {
+        "preferred-install": "dist"
     }
 }
