--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "mindscape/raygun4php",
     "type": "library",
-    "description": "Raygun.io client for PHP 5.3, to send errors and exceptions automatically.",
+    "description": "Raygun.io client for sending errors and exceptions automatically.",
     "authors": [{
         "name": "Mindscape",
         "email": "contact@mindscape.co.nz",
@@ -11,7 +11,7 @@
     "keywords": ["raygun", "errors", "exceptions", "logging"],
     "license": "MIT",
     "require": {
-        "php": ">=5.3.0"
+        "php": "^5.4"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*"
