Fix namespace See https://getcomposer.org/doc/04-schema.md#psr-0

--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
     },
     "autoload": {
         "psr-0": {
-            "Raygun4php": "src/"
+            "Raygun4php\\": "src/"
         }
     },
     "config": {
