--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
         "psr-4": {
             "Raygun4php\\": "src/Raygun4php/",
             "Raygun4php\\Tests\\": "tests/",
+            "Raygun4php\\Tests\\Stubs\\": "tests/stubs",
             "Raygun4php\\Interfaces\\": "src/Raygun4php/interfaces/",
             "Raygun4php\\Transports\\": "src/Raygun4php/transports/"
         }
