--- a/composer.json
+++ b/composer.json
@@ -37,10 +37,7 @@
     "autoload": {
         "psr-4": {
             "Raygun4php\\": "src/Raygun4php/",
-            "Raygun4php\\Tests\\": "tests/",
-            "Raygun4php\\Tests\\Stubs\\": "tests/stubs",
-            "Raygun4php\\Interfaces\\": "src/Raygun4php/interfaces/",
-            "Raygun4php\\Transports\\": "src/Raygun4php/transports/"
+            "Raygun4php\\Tests\\": "tests/"
         }
     },
     "config": {
