--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: php
 
 dist: trusty
 
-php: [5.4, 5.5, 7.0]
+php: [5.4, 5.5, 5.6, 7.0, 7.1, 7.2, 7.3, 7.4]
 
 before_script:
   - composer self-update
