--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ php: [5.4, 5.5, 5.6, 7.0, 7.1, 7.2, 7.3, 7.4]
 
 before_script:
   - composer self-update
+  - if [[ ${TRAVIS_PHP_VERSION:0:3} =~ ^7\.[234]$ ]] ; then composer require --dev phpunit/phpunit:"^5.7.27" ; fi
   - composer install --prefer-source --no-interaction --no-progress
 
 script: 'vendor/bin/phpunit tests'
