Amend the proxy instructions

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "exceptions",
         "logging"
     ],
-    "homepage": "http://raygun.io",
+    "homepage": "http://raygun.com",
     "license": "MIT",
     "authors": [
         {
