--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
     "require": {
         "php": "^7.1",
         "guzzlehttp/guzzle": "~6.0",
-        "psr/log": "^1.1"
+        "psr/log": "^1.1",
+      "ext-json": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.0",
