--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     ],
     "require": {
         "php": "^7.1",
-        "guzzlehttp/guzzle": "~6.0",
+        "ext-json": "*",
+        "guzzlehttp/guzzle": "~7.0",
         "psr/log": "^1.1"
     },
     "require-dev": {
