--- a/composer.json
+++ b/composer.json
@@ -18,15 +18,15 @@
         }
     ],
     "require": {
-        "php": "^7.2",
+        "php": "^7.2|^8.0",
         "ext-json": "*",
         "guzzlehttp/guzzle": "~7.0",
         "psr/log": "^1.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.0",
+        "phpunit/phpunit": "^9.0",
         "squizlabs/php_codesniffer": "^3.0",
-        "estahn/phpunit-json-assertions": "^3.0"
+        "estahn/phpunit-json-assertions": "^3"
     },
     "suggest": {
         "ext-curl": "*"
