Add docker example for the async sample app

--- a/sample-apps/async-example/src/composer.json
+++ b/sample-apps/async-example/src/composer.json
@@ -2,5 +2,7 @@
     "require": {
         "mindscape/raygun4php": "^2.0",
         "monolog/monolog": "2.0.2"
-    }
+    },
+    "name": "raygun4php/async-example",
+    "description": "Raygun4PHP async sample app"
 }
