--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "authors": [
         {
             "name": "Raygun",
-            "email": "contact@raygun.com",
+            "email": "support@raygun.com",
             "homepage": "https://raygun.com"
         }
     ],
