--- a/composer.json
+++ b/composer.json
@@ -8,15 +8,20 @@
         "exceptions",
         "logging"
     ],
-    "homepage": "http://raygun.com",
+    "homepage": "https://raygun.com",
     "license": "MIT",
     "authors": [
         {
-            "name": "Mindscape",
-            "email": "contact@mindscape.co.nz",
-            "homepage": "http://www.mindscapehq.com"
+            "name": "Raygun",
+            "homepage": "https://raygun.com"
         }
     ],
+    "support": {
+        "issues": "https://github.com/MindscapeHQ/raygun4php/issues",
+        "source": "https://github.com/MindscapeHQ/raygun4php",
+        "docs": "https://raygun.com/documentation/language-guides/php/crash-reporting/",
+        "chat": "https://raygun.com/about/contact"
+    },
     "require": {
         "php": "^7.2|^8.0",
         "ext-json": "*",
@@ -46,6 +51,8 @@
         "preferred-install": "dist"
     },
     "scripts": {
-        "test": ["phpunit"]
+        "test": [
+            "phpunit"
+        ]
     }
 }
